--- a/index.html
+++ b/index.html
@@ -19,7 +19,198 @@
 			}
 		</style>
 	</head>
-	<body>
-		<main></main>
+	<body class="bg-black text-white">
+		<!-- hero section -->
+		<header class="h-screen overflow-hidden">
+			<div class="max-w-6xl mx-auto">
+				<nav class="flex items-center justify-between py-6">
+					<img src="/img/logo.png" alt="" class="h-24" />
+
+					<ul class="flex items-center space-x-8 font-semibold uppercase">
+						<li class="py-3 hover:border-b-2 hover:border-red-500 cursor-pointer hover:text-gray-300">home</li>
+						<li class="py-3 hover:border-b-2 hover:border-red-500 cursor-pointer hover:text-gray-300">About</li>
+						<li class="py-3 hover:border-b-2 hover:border-red-500 cursor-pointer hover:text-gray-300">projects</li>
+						<li class="py-3 hover:border-b-2 hover:border-red-500 cursor-pointer hover:text-gray-300">contact</li>
+					</ul>
+				</nav>
+
+				<div class="grid grid-cols-2 items-center gap-x-20">
+					<div class="space-y-6">
+						<p class="text-xl font-bold text-red-500">Hello, I'm Jim Kirk</p>
+						<h3 class="font-extrabold text-5xl">A web developer</h3>
+						<p class="font-medium">
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque praesentium repellendus delectus ipsa?
+							Recusandae, consequuntur!
+						</p>
+						<a
+							href="#"
+							class="inline-block px-10 py-3 text-center font-semibold text-white bg-red-600 hover:bg-red-700"
+						>
+							About me</a
+						>
+					</div>
+
+					<img src="/img/hero.png" alt="" />
+				</div>
+			</div>
+		</header>
+		<section class="h-screen relative py-14">
+			<div class="bg-[#1a1a1a] w-1/2 h-full text-lg absolute top-0 left-0"></div>
+			<div class="relative z-30">
+				<div class="max-w-6xl mx-auto grid grid-cols-3 gap-12">
+					<div
+						class="space-y-6 px-6 py-10 bg-[#0d0d0d] shadow-md hover:bg-red-600 hover:text-white cursor-pointer group"
+					>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="currentColor"
+							class="w-12 h-12 text-red-500 group-hover:text-white"
+						>
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								d="M9 17.25v1.007a3 3 0 01-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0115 18.257V17.25m6-12V15a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 15V5.25m18 0A2.25 2.25 0 0018.75 3H5.25A2.25 2.25 0 003 5.25m18 0V12a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 12V5.25"
+							/>
+						</svg>
+
+						<h3 class="text-2xl font-bold">UI Design</h3>
+
+						<p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+						<p class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white">
+							<span>know more</span>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="w-6 h-6"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+								/>
+							</svg>
+						</p>
+					</div>
+
+					<div
+						class="space-y-6 px-6 py-10 bg-[#0d0d0d] shadow-md hover:bg-red-600 hover:text-white cursor-pointer group"
+					>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="currentColor"
+							class="w-12 h-12 text-red-500 group-hover:text-white"
+						>
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
+							/>
+						</svg>
+
+						<h3 class="text-2xl font-bold">Product Design</h3>
+
+						<p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+						<p class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white">
+							<span>know more</span>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="w-6 h-6"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+								/>
+							</svg>
+						</p>
+					</div>
+
+					<div
+						class="space-y-6 px-6 py-10 bg-[#0d0d0d] shadow-md hover:bg-red-600 hover:text-white cursor-pointer group"
+					>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="currentColor"
+							class="w-12 h-12 text-red-500 group-hover:text-white"
+						>
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								d="M7.5 14.25v2.25m3-4.5v4.5m3-6.75v6.75m3-9v9M6 20.25h12A2.25 2.25 0 0020.25 18V6A2.25 2.25 0 0018 3.75H6A2.25 2.25 0 003.75 6v12A2.25 2.25 0 006 20.25z"
+							/>
+						</svg>
+
+						<h3 class="text-2xl font-bold">Branding</h3>
+
+						<p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+						<p class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white">
+							<span>know more</span>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="w-6 h-6"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+								/>
+							</svg>
+						</p>
+					</div>
+				</div>
+
+				<div class="max-w-6xl mx-auto grid grid-cols-3 gap-10 mt-12 items-center">
+					<div class="col-span-1">
+						<h1 class="text-6xl font-black text-red-500 text-center">14+</h1>
+						<p class="font-semibold text-center mt-3">Years Exprerience</p>
+					</div>
+
+					<div class="col-span-2 grid grid-cols-2 gap-10">
+						<div class="bg-[#0d0d0d] py-4">
+							<h1 class="text-3xl font-extrabold text-red-500 text-center">60+</h1>
+							<p class="font-medium text-center mt-3">Happy clients</p>
+						</div>
+
+						<div class="bg-[#0d0d0d] py-4">
+							<h1 class="text-3xl font-extrabold text-red-500 text-center">16</h1>
+							<p class="font-medium text-center mt-3">Tech Skills</p>
+						</div>
+
+						<div class="bg-[#0d0d0d] py-4">
+							<h1 class="text-3xl font-extrabold text-red-500 text-center">122+</h1>
+							<p class="font-medium text-center mt-3">Completed Projects</p>
+						</div>
+
+						<div class="bg-[#0d0d0d] py-4">
+							<h1 class="text-3xl font-extrabold text-red-500 text-center">08</h1>
+							<p class="font-medium text-center mt-3">Achievements</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
