--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<!-- google fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
+			rel="stylesheet"
+		/>
 
 		<style>
 			body {
@@ -37,14 +40,14 @@
 				<div class="grid grid-cols-2 items-center gap-x-20">
 					<div class="space-y-6">
 						<p class="text-xl font-bold text-red-500">Hello, I'm Jim Kirk</p>
-						<h3 class="font-extrabold text-5xl">A web developer</h3>
+						<h3 class="font-extrabold text-5xl">A Web Designer</h3>
 						<p class="font-medium">
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque praesentium repellendus delectus ipsa?
 							Recusandae, consequuntur!
 						</p>
 						<a
 							href="#"
-							class="inline-block px-10 py-3 text-center font-semibold text-white bg-red-600 hover:bg-red-700"
+							class="inline-block px-10 py-3 uppercase text-center font-semibold text-white bg-red-600 hover:bg-red-700"
 						>
 							About me</a
 						>
@@ -54,7 +57,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="h-screen relative py-14">
+		<section class="min-h-screen relative py-14">
 			<div class="bg-[#1a1a1a] w-1/2 h-full text-lg absolute top-0 left-0"></div>
 			<div class="relative z-30">
 				<div class="max-w-6xl mx-auto grid grid-cols-3 gap-12">
@@ -212,5 +215,199 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="min-h-screen py-20">
+			<div class="max-w-6xl mx-auto">
+				<div class="flex items-center justify-between">
+					<div>
+						<h3 class="text-3xl uppercase font-extrabold mb-3">Featured projects</h3>
+						<p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+					</div>
+
+					<a
+						href="#"
+						class="inline-block px-10 py-3 text-center font-semibold text-white bg-red-600 hover:bg-red-700 uppercase"
+					>
+						View All</a
+					>
+				</div>
+
+				<div class="grid grid-cols-2 gap-12 max-w-5xl mx-auto mt-16">
+					<div class="bg-[#0d0d0d]">
+						<img src="/img/dashboard.jpg" alt="" class="w-full object-cover h-56" />
+						<div class="p-4 space-y-4">
+							<h4 class="text-xl font-bold">DashBoard UI</h4>
+							<p
+								class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white"
+							>
+								<span>know more</span>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									class="w-6 h-6"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+									/>
+								</svg>
+							</p>
+						</div>
+					</div>
+
+					<div class="bg-[#0d0d0d]">
+						<img src="/img/fashion app.jpg" alt="" class="w-full object-cover h-56" />
+						<div class="p-4 space-y-4">
+							<h4 class="text-xl font-bold">Fashion App UI</h4>
+							<p
+								class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white"
+							>
+								<span>know more</span>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									class="w-6 h-6"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+									/>
+								</svg>
+							</p>
+						</div>
+					</div>
+
+					<div class="bg-[#0d0d0d]">
+						<img src="/img/profile.jpg" alt="" class="w-full object-cover h-56" />
+						<div class="p-4 space-y-4">
+							<h4 class="text-xl font-bold">User Profile UI</h4>
+							<p
+								class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white"
+							>
+								<span>know more</span>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									class="w-6 h-6"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+									/>
+								</svg>
+							</p>
+						</div>
+					</div>
+
+					<div class="bg-[#0d0d0d]">
+						<img src="/img/signup.jpg" alt="" class="w-full object-cover h-56" />
+						<div class="p-4 space-y-4">
+							<h4 class="text-xl font-bold">User Signup UI</h4>
+							<p
+								class="text-red-500 uppercase font-semibold flex items-center space-x-4 text-sm group-hover:text-white"
+							>
+								<span>know more</span>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									class="w-6 h-6"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+									/>
+								</svg>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="bg-[#1a1a1a] h-[80vh] flex justify-center items-end">
+			<div class="bg-[#0d0d0d] max-w-6xl mx-auto mb-32 px-14 py-20">
+				<div class="flex items-center justify-between">
+					<div class="w-1/2">
+						<h3 class="text-3xl uppercase font-black mb-4">Let's get started on your Next Project</h3>
+						<p class="font-medium">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+					</div>
+
+					<a
+						href="#"
+						class="inline-block px-10 py-3 text-center font-semibold text-white bg-red-600 hover:bg-red-700 uppercase"
+					>
+						contact me</a
+					>
+				</div>
+			</div>
+		</section>
+
+		<footer class="py-4">
+			<div class="max-w-6xl mx-auto flex justify-between items-center">
+				<img src="/img/logo.png" class="h-24" alt="" />
+
+				<div class="flex items-center space-x-4">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-white">
+						<path
+							d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"
+						/>
+					</svg>
+
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-white">
+						<path
+							d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.5 8.778c-.441.196-.916.328-1.414.388.509-.305.898-.787 1.083-1.362-.476.282-1.003.487-1.564.597-.448-.479-1.089-.778-1.796-.778-1.59 0-2.758 1.483-2.399 3.023-2.045-.103-3.86-1.083-5.074-2.572-.645 1.106-.334 2.554.762 3.287-.403-.013-.782-.124-1.114-.308-.027 1.14.791 2.207 1.975 2.445-.346.094-.726.116-1.112.042.313.978 1.224 1.689 2.3 1.709-1.037.812-2.34 1.175-3.647 1.021 1.09.699 2.383 1.106 3.773 1.106 4.572 0 7.154-3.861 6.998-7.324.482-.346.899-.78 1.229-1.274z"
+						/>
+					</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-white">
+						<path
+							d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+						/>
+					</svg>
+
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-white">
+						<path
+							d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+						/>
+					</svg>
+				</div>
+
+				<p class="font-medium">
+					Designed with lots of
+					<span
+						><svg
+							xmlns="http://www.w3.org/2000/svg"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="currentColor"
+							class="w-6 h-6 text-red-500 fill-red-500"
+						>
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+							/>
+						</svg>
+					</span>
+					By Paul
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
